fixing a11y contrast

--- a/dentallab/src/index.css
+++ b/dentallab/src/index.css
@@ -61,5 +61,5 @@ button{
 }
 
 .footer-container{
-  color: #3B8B9A;
+  color: #275d67;
 }
